making use of getLast